--- a/snakedenfitness/templates/base.html
+++ b/snakedenfitness/templates/base.html
@@ -4,18 +4,30 @@
 <head>
     <title>Snake Den Fitness</title>
     <link rel="stylesheet" href="{% static 'style.css' %}">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </head>
 <body>
     <nav class="navbar navbar-dark bg-dark">
-        <a href="#" class="navbar-brand px-2">SNAKEDEN</a>
+        <a href="{% url 'index'%} " class="navbar-brand px-2">SNAKEDEN</a>
         <div class="navbar">
             <a href="{% url 'diet_home' %}" class="nav-item nav-link">Diet</a>
             <a href="{% url 'fitness_home' %}" class="nav-item nav-link">Fitness</a>
             <a href="{% url 'community_home' %}" class="nav-item nav-link">Community</a>
+
+            <!-- once auth is finished, change "account" to "log in" if not logged in -->
+            <a href="{% url 'register' %}" class="nav-item nav-link"><i class="bi bi-person" style="color: white;"> Account </i></a>
         </div>
     </nav>
+
+    <!-- Messages to the user, auth confirmation -->
+    {% if messages %}
+        {% for msg in messages %}
+            <div class="alert alert-{{msg.tags}}"> {{msg}} </div>
+        {% endfor %}
+    {% endif %}
+
     {% block body %}
 
     {% endblock %}
