--- a/snakedenfitness/fitness/templates/fitness/trainer_home.html
+++ b/snakedenfitness/fitness/templates/fitness/trainer_home.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %}
 
 {% block body %}
- <h1>Trainer Home</h1>
+<h1>Trainer Home</h1>
+<h2>Name: {{ user.get_full_name }}</h2>
+<h3>Username: {{ user.username }}</h3>
 {% endblock %}
