--- a/snakedenfitness/users/templates/users/login.html
+++ b/snakedenfitness/users/templates/users/login.html
@@ -6,11 +6,11 @@
 {% load crispy_forms_tags %}
 
 <div class="container py-5">
-    <h1>Register</h1>
+    <h1>Log-in</h1>
     <form method="POST">
         {% csrf_token %}
         {{form|crispy}}
-        <button class="btn btn-primary" type="submit">Register</button>
+        <button class="btn btn-primary" type="submit">Log in</button>
     </form>
 </div>
 
