Meal form saves to Meal model and redirects to Diet home

--- a/snakedenfitness/diet/templates/diet/meal_form.html
+++ b/snakedenfitness/diet/templates/diet/meal_form.html
@@ -4,7 +4,7 @@
  <h1>Enter Meal Information</h1>
 
 <!--TODO: process the meal information -->
-<form action="/process_meal_form/" method="post">
+<form action="/diet/" method="post">
     {% csrf_token %}
     <div style="margin-left: 20px;">
         <br>
