--- a/snakedenfitness/diet/templates/diet/meal_form.html
+++ b/snakedenfitness/diet/templates/diet/meal_form.html
@@ -2,7 +2,9 @@
 
 {% block body %}
  <h1>Enter Meal Information</h1>
-
+ <h3>
+  <a href="{% url 'diet_home' %}" style="text-decoration: none; color: limegreen;">Back</a>
+ </h3>
 <!--TODO: process the meal information -->
 <form action="/diet/" method="post">
     {% csrf_token %}
