Workout model added to Fitness, created links between fitness home and workout_form, workout_form saves form information to database

--- a/snakedenfitness/fitness/templates/fitness/fitness_home.html
+++ b/snakedenfitness/fitness/templates/fitness/fitness_home.html
@@ -2,4 +2,7 @@
 
 {% block body %}
  <h1>Fitness Home</h1>
+ <h3>
+  <a href="{% url 'workout_form' %}" style="text-decoration: none; color: limegreen;">Workout Form</a>
+ </h3>
 {% endblock %}
