--- a/snakedenfitness/templates/login.html
+++ b/snakedenfitness/templates/login.html
@@ -1,9 +1,9 @@
 {% extends 'base.html' %}
 
-{% block title %}Login{% endblock %}
+{% block title %}Sign In{% endblock %}
 
 {% block body %}
-<h1>Log In</h1>
+<h1>Sign In</h1>
 
 <main class="main">
     <section class="row">
