--- a/snakedenfitness/users/templates/users/register.html
+++ b/snakedenfitness/users/templates/users/register.html
@@ -5,13 +5,17 @@
 {% block body %}
 {% load crispy_forms_tags %}
 
-<div class="container py-5">
-    <h1>Register</h1>
+<div class="container py-5" style="max-width: 350px">
+    <h1 style="margin-left: 95px">Sign Up</h1>
     <form method="POST">
         {% csrf_token %}
         {{form|crispy}}
-        <button class="btn btn-primary" type="submit">Register</button>
+        <button class="btn btn-primary" style="margin-left: 125px; margin-top: 20px" type="submit">Sign Up</button>
     </form>
+    <div class="d-flex align-items-center justify-content-center pb-4" style="margin-top: 15px">
+         <p class="mb-0 me-2">Already have an account?</p>
+        <a href="{% url 'login' %}"> Sign In Here</a>
+    </div>
 </div>
 
 
