registration, log-in functional. users can self-assign groups, but groups have no use
registration, log-in functional. users can self-assign groups, but groups have no use.
TODO:
- fix avatars. set default avatar, give preview in registration, allow cropping??
- add additional functionality to user groups
 + dieticians should not be able to view fitness pages, and reverse.
  + when fitness/diet models are merged, allow professionals to view appropriate clients data

--- a/snakedenfitness/users/templates/users/profile.html
+++ b/snakedenfitness/users/templates/users/profile.html
@@ -2,10 +2,11 @@
 
 {% block body %}
 
-<h1>This is your account profile. If you are logged in, your username is {{user.username}}</h1>
-
-<h1>if not, then you shouldnt be able to read this</h1>
-
+<h1>Welcome {{user.username}}</h1>
+<ul>
+    <li>Name: {{ user.get_full_name }}</li>
+    <li>Birth Date: {{ user.profile.birth_date }}</li>
+</ul>
 
 
 
