--- a/snakedenfitness/users/templates/users/login.html
+++ b/snakedenfitness/users/templates/users/login.html
@@ -5,7 +5,7 @@
 {% block body %}
 {% load crispy_forms_tags %}
 
-<div class="container py-5">
+<div class="container py-5" style="max-width: 50%;" >
     <h1>Log-in</h1>
     <form method="POST">
         {% csrf_token %}
