--- a/snakedenfitness/users/templates/users/profile.html
+++ b/snakedenfitness/users/templates/users/profile.html
@@ -6,6 +6,7 @@
 <ul>
     <li>Name: {{ user.get_full_name }}</li>
     <li>Birth Date: {{ user.profile.birth_date }}</li>
+    <li>Bio: {{ user.profile.bio }}</li>
 </ul>
 
 
