--- a/snakedenfitness/users/templates/users/register.html
+++ b/snakedenfitness/users/templates/users/register.html
@@ -17,7 +17,7 @@
 
 <div class="container py-5" style="max-width: 50%;">
     <h1>Register</h1>
-    <form method="POST">
+    <form enctype="multipart/form-data" method="POST">
         {% csrf_token %}
         {{ user_form|crispy}}
         {{ profile_form|crispy }}
