Fixed things that were merged in from main branch

--- a/snakedenfitness/diet/templates/diet/meal_form.html
+++ b/snakedenfitness/diet/templates/diet/meal_form.html
@@ -21,7 +21,7 @@
         <br>
         <div>Protein: {{ form.protein }}</div>
         <br>
-        <input type="submit" value="SUBMIT">
+        <button class="btn btn-primary" type="submit">Submit</button>
     </div>
 </form>
 
