--- a/snakedenfitness/users/templates/users/login.html
+++ b/snakedenfitness/users/templates/users/login.html
@@ -1,27 +1,20 @@
-
-
 {% extends 'base.html' %}
 
 {% block body %}
 {% load crispy_forms_tags %}
 
-<<<<<<< HEAD
 <div class="container py-5" style="max-width: 300px">
-    <h1 style="margin-left: 75px">Sign In</h1>
-=======
-<div class="container py-5" style="max-width: 50%;" >
-    <h1>Log-in</h1>
->>>>>>> 43e0ce6a349bcbaeb3f009db9db238ffe8ccda8c
+<div class="container py-5" style="max-width: 90%;" >
+    <h1 style="margin-left: 40px;">Log-in</h1>
     <form method="POST">
         {% csrf_token %}
         {{form|crispy}}
-        <button class="btn btn-primary" style="margin-left: 100px; margin-top: 30px" type="submit">Sign In</button>
+        <button class="btn btn-primary" style="margin-left: 65px; margin-top: 30px" type="submit">Sign In</button>
     </form>
     <div class="d-flex align-items-center justify-content-center pb-4" style="margin-top: 15px">
          <p class="mb-0 me-2">Don't have an account?</p>
         <a href="{% url 'register' %}"> Sign Up Here</a>
     </div>
 </div>
-
 
 {% endblock %}
