--- a/snakedenfitness/community/templates/community/community_home.html
+++ b/snakedenfitness/community/templates/community/community_home.html
@@ -1,30 +1,30 @@
 {% extends 'base.html' %}
 
 {% block body %}
-<h1 style="margin-left: 800PX; margin-top: 50px">Workout Mania</h1>
+<h1 style="margin-left: 900PX; margin-top: 50px">Community</h1>
 
-<div class="container p-0" style="margin-top: 25px">
+<div class="container p-0">
 <div class="row py-3">
-     <div class="col-md-12 text-center h6">
-         <a href="{% url 'new_post' %}">
-            <button class="btn btn-success" type="submit">New Post</button>
-         </a>
-         <button class="btn btn-secondary" type="submit">Edit Group</button>
-         <input class="btn btn-light" style="margin-left: 500px" type="text" placeholder="Enter Users Code Here!"></input>
-         <button class="btn btn-info" type="submit">Invite</button>
+     <div class="col-md-4 text-center h6">
+            <button class="btn btn-success" type="submit">New Group</button>
      </div>
-
+    <div class="col-md-8"></div>
 </div>
 
-<div class="row pb-2" style="margin-top: 10px; margin-left: 15px;">
-        <div class="col-md-4 text-center h6">
-            Joe Johnson
+<div class="row pb-1">
+        <div class="col-md-12 text-center h4">
+            My Groups
         </div>
-        <div class="col-md-4 text-center h6">
-            Went for a great run today! 8.3 miles! Feeling great!
+</div>
+
+<div class="row pb-1">
+        <div class="col-md-6 text-center h6">
+            Workout Mania
         </div>
-        <div class="col-md-4 text-center h6">
+        <div class="col-md-6 text-center h6">
+            <a href="{% url 'groups' %}">
             <button class="btn btn-warning" style="color: white" type="submit">View</button>
+            </a>
         </div>
 </div>
 </div>
