--- a/snakedenfitness/community/templates/community/new_post.html
+++ b/snakedenfitness/community/templates/community/new_post.html
@@ -14,7 +14,7 @@
   </div>
 
   <button type="submit" class="btn btn-primary" style="margin-top: 15px; margin-left: 165px">Post</button>
-    <a href="{% url 'community_home' %}" class="btn btn-danger" style="margin-top: 15px">Cancel</a>
+    <a href="{% url 'groups' %}" class="btn btn-danger" style="margin-top: 15px">Cancel</a>
 </form>
 </div>
 {% endblock %}
