--- a/snakedenfitness/templates/base.html
+++ b/snakedenfitness/templates/base.html
@@ -29,7 +29,7 @@
                         <a class="dropdown-item " href="{% url 'profile' %}" > Profile </a>
                         <a class="dropdown-item " href="{% url 'logout' %}" > Log-out </a>
                     {% else %}
-                        <a class="dropdown-item " href="{% url 'login' %}"> Log-in </a>
+                        <a class="dropdown-item " href="{% url 'login' %}"> Login </a>
                         <a class="dropdown-item " href="{% url 'register' %}" > Register </a>
                     {% endif %}
                 </div>
