Added more formatting

--- a/snakedenfitness/community/templates/community/new_post.html
+++ b/snakedenfitness/community/templates/community/new_post.html
@@ -2,7 +2,7 @@
 
 {% block body %}
 <div class="container p-0" style="margin-top: 25px; max-width: 25%;">
-    <h1 style="margin-left: 165px">New Post</h1>
+    <h1 style="text-align: center">New Post</h1>
 <form style="margin-top: 25px">
   <div class="form-group">
     <label for="postTitle">Post Title</label>
