--- a/snakedenfitness/community/templates/community/edit_groups.html
+++ b/snakedenfitness/community/templates/community/edit_groups.html
@@ -2,7 +2,7 @@
 
 {% block body %}
 <div class="container p-0" style="margin-top: 25px; max-width: 25%;">
-    <h1 style="margin-left: 165px">Edit Group</h1>
+    <h1 style="text-align: center">Edit Group</h1>
 <form style="margin-top: 25px">
   <div class="form-group">
     <label for="postTitle">Group Name</label>
@@ -14,14 +14,20 @@
   </div>
     <div class="form-group" style="margin-top: 10px">
     <label for="members">Members</label>
-        <div class="col-md-4 text-center h6">
+        <div style="margin-top: 15px; text-align: center; border-bottom: 10px">
             Joe Johnson
+            <button type="submit" id="members" class="btn btn-danger" style="margin-left: 165px">Remove</button>
         </div>
-    <button type="submit" id="members" class="btn btn-danger" style="margin-top: 15px; margin-left: 165px">Remove</button>
+        <div style="margin-top: 15px; text-align: center;">
+            Jacob Jacobi
+            <button type="submit" id="members" class="btn btn-danger" style="margin-left: 160px">Remove</button>
+        </div>
   </div>
+    <div style="margin-top: 20px">
+         <button type="submit" class="btn btn-primary" style="margin-top: 15px; margin-left: 165px">Save</button>
+        <a href="{% url 'groups' %}" class="btn btn-danger" style="margin-top: 15px">Cancel</a>
+    </div>
 
-  <button type="submit" class="btn btn-primary" style="margin-top: 15px; margin-left: 165px">Save</button>
-    <a href="{% url 'groups' %}" class="btn btn-danger" style="margin-top: 15px">Cancel</a>
 </form>
 
 </div>
