--- a/snakedenfitness/fitness/templates/fitness/fitness_home.html
+++ b/snakedenfitness/fitness/templates/fitness/fitness_home.html
@@ -7,7 +7,8 @@
 <div class="row pb-3">
      <div class="col-md-4 text-center h6">
          <button class="btn btn-success" type="submit">New</button>
-         <button class="btn btn-info" type="submit">Request Trainer</button>
+         <a href="{% url 'request_trainer' %}">
+         <button class="btn btn-info" type="submit">Request Trainer</button></a>
      </div>
     <div class="col-md-8"></div>
 </div>
