--- a/snakedenfitness/users/templates/users/login.html
+++ b/snakedenfitness/users/templates/users/login.html
@@ -5,11 +5,11 @@
 
 <div class="container py-5" style="max-width: 25%">
 <div class="container py-5" >
-    <h1 style="margin-left: 175px;">Login</h1>
+    <h1 style="text-align: center;">Login</h1>
     <form method="POST">
         {% csrf_token %}
         {{form|crispy}}
-        <button class="btn btn-primary" style="margin-left: 190px; margin-top: 15px" type="submit">Login</button>
+        <button class="btn btn-primary" style="margin-left: 185px; margin-top: 15px" type="submit">Login</button>
     </form>
     <div class="d-flex align-items-center justify-content-center pb-4" style="margin-top: 15px">
          <p class="mb-0 me-2">Don't have an account?</p>
