--- a/snakedenfitness/users/templates/users/register.html
+++ b/snakedenfitness/users/templates/users/register.html
@@ -8,7 +8,7 @@
 <div class="container py-5" style="max-width: 50%">
 
 <div class="container py-5" style="max-width: 50%;">
-    <h1 style="margin-left: 145px">Register</h1>
+    <h1 style="text-align: center;">Register</h1>
     <form enctype="multipart/form-data" method="POST">
         {% csrf_token %}
         {{ user_form|crispy}}
