--- a/snakedenfitness/templates/index.html
+++ b/snakedenfitness/templates/index.html
@@ -4,4 +4,38 @@
 
 {% block body %}
  <h1>Welcome to the Snakeden</h1>
+<h6>There's no client page yet so I'm just adding this mockup here for now</h6>
+
+<h1 style="text-align: center; margin-top: 50px">Clients</h1>
+
+<div class="container p-0" style="margin-left: 375px">
+
+<div class="row pb-1" style="text-align: center">
+        <div class="col-md-6 text-center h4" >
+            My Clients
+        </div>
+        <div class="col-md-3 text-center h4">
+            Client Requests
+        </div>
+</div>
+
+
+<div class="row pb-1">
+        <div class="col-md-6 text-center h6" style=" margin-top: 20px">
+            Joe Johnson
+            <button class="btn btn-warning" style="color: white; margin-left: 20px;" type="submit">View</button>
+        </div>
+
+        <div class="col-md-3 text-center h6" style=" margin-top: 20px">
+            John Joseph
+            <a href="{% url 'groups' %}">
+            <button class="btn btn-success" style="color: white; margin-left: 20px;" type="submit">Accept</button>
+            <button class="btn btn-danger" style="color: white; margin-left: 10px;" type="submit">Decline</button>
+            </a>
+        </div>
+</div>
+</div>
+</div>
+
+
 {% endblock %}
