--- a/snakedenfitness/fitness/templates/fitness/fitness_home.html
+++ b/snakedenfitness/fitness/templates/fitness/fitness_home.html
@@ -6,7 +6,9 @@
 <div class="container p-0">
 <div class="row pb-3">
      <div class="col-md-4 text-center h6">
+         <a href="{% url 'workout_form' %}">
          <button class="btn btn-success" type="submit">New</button>
+         </a>
          <a href="{% url 'request_trainer' %}">
          <button class="btn btn-info" type="submit">Request Trainer</button></a>
      </div>
