--- a/snakedenfitness/diet/templates/diet/meal_form.html
+++ b/snakedenfitness/diet/templates/diet/meal_form.html
@@ -2,17 +2,56 @@
 
 {% block body %}
 <div class="container p-0" style="margin-top: 25px; max-width: 25%;">
- <h1 style="text-align: center">Enter Meal Information</h1>
+    <h1 class="text-center pt-2">Enter Meal Information</h1>
 <!--TODO: process the meal information -->
-<form action="/diet/" method="post" style="margin-top: 25px">
-    {% csrf_token %}
-    {{ form.as_p }}
-
-        <input type="submit" class="btn btn-primary" style="margin-top: 15px; margin-left: 165px; text-align: center" value="Submit">
-        <a href="{% url 'diet_home' %}" class="btn btn-danger" style="margin-top: 15px;">Back</a>
-    </div>
-</form>
+    <form action="/diet/" method="post">
+        {% csrf_token %}
+        <div class="row form-group py-3">
+            <div class="col-sm-3 col-md-3 d-flex justify-content-end">
+                <label class="h5 pt-1">Meal Name</label>
+            </div>
+            <div class="col-sm-9 col-md-7">{{ form.name }}</div>
+            <div class="col-md-2"></div>
+        </div>
+        <div class="row form-group py-3">
+            <div class="col-sm-3 col-md-3 d-flex justify-content-end">
+                <label class="h5 pt-1">Meal Type</label>
+            </div>
+             <div class="col-sm-9 col-md-7">{{ form.meal_type }}</div>
+            <div class="col-md-2"></div>
+        </div>
+        <div class="row form-group py-3">
+            <div class="col-sm-3 col-md-3 d-flex justify-content-end">
+                <label class="h5 pt-1">Calories</label>
+            </div>
+             <div class="col-sm-9 col-md-7">{{ form.calories }}</div>
+            <div class="col-md-2"></div>
+        </div>
+        <div class="row form-group py-3">
+            <div class="col-sm-3 col-md-3 d-flex justify-content-end">
+                <label class="h5 pt-1">Carbs</label>
+            </div>
+             <div class="col-sm-9 col-md-7">{{ form.carbs }}</div>
+            <div class="col-md-2"></div>
+        </div>
+        <div class="row form-group py-3">
+            <div class="col-sm-3 col-md-3 d-flex justify-content-end">
+                <label class="h5 pt-1">Sugars</label>
+            </div>
+             <div class="col-sm-9 col-md-7">{{ form.sugars }}</div>
+            <div class="col-md-2"></div>
+        </div>
+        <div class="row form-group py-3">
+            <div class="col-sm-3 col-md-3 d-flex justify-content-end">
+                <label class="h5 pt-1">Protein</label>
+            </div>
+             <div class="col-sm-9 col-md-7">{{ form.protein }}</div>
+            <div class="col-md-2"></div>
+        </div>
+        <div class="d-flex justify-content-center py-3">
+                <button class="btn btn-primary mx-1" type="submit" value="SUBMIT">Submit</button>
+                <a href="{% url 'diet_home' %}" class="btn btn-danger mx-1">Cancel</a>
+        </div>
+    </form>
 </div>
-
 {% endblock %}
-
