--- a/snakedenfitness/fitness/templates/fitness/trainer_home.html
+++ b/snakedenfitness/fitness/templates/fitness/trainer_home.html
@@ -1,7 +1,20 @@
 {% extends 'base.html' %}
 
 {% block body %}
+
 <h1>Trainer Home</h1>
 <h2>Name: {{ user.get_full_name }}</h2>
 <h3>Username: {{ user.username }}</h3>
+
+{% if user.is_authenticated %}
+    <p>you are authenticated</p>
+{% endif %}
+{% if user.profile.role == 2 %}
+    <p>you are a Trainer</p>
+{% endif %}
+
+
+
+
+
 {% endblock %}
