--- a/snakedenfitness/diet/templates/diet/meal_form.html
+++ b/snakedenfitness/diet/templates/diet/meal_form.html
@@ -6,48 +6,8 @@
 <!--TODO: process the meal information -->
     <form action="/diet/" method="post">
         {% csrf_token %}
-        <div class="row form-group py-3">
-            <div class="col-sm-3 col-md-3 d-flex justify-content-end">
-                <label class="h5 pt-1">Meal Name</label>
-            </div>
-            <div class="col-sm-9 col-md-7">{{ form.name }}</div>
-            <div class="col-md-2"></div>
-        </div>
-        <div class="row form-group py-3">
-            <div class="col-sm-3 col-md-3 d-flex justify-content-end">
-                <label class="h5 pt-1">Meal Type</label>
-            </div>
-             <div class="col-sm-9 col-md-7">{{ form.meal_type }}</div>
-            <div class="col-md-2"></div>
-        </div>
-        <div class="row form-group py-3">
-            <div class="col-sm-3 col-md-3 d-flex justify-content-end">
-                <label class="h5 pt-1">Calories</label>
-            </div>
-             <div class="col-sm-9 col-md-7">{{ form.calories }}</div>
-            <div class="col-md-2"></div>
-        </div>
-        <div class="row form-group py-3">
-            <div class="col-sm-3 col-md-3 d-flex justify-content-end">
-                <label class="h5 pt-1">Carbs</label>
-            </div>
-             <div class="col-sm-9 col-md-7">{{ form.carbs }}</div>
-            <div class="col-md-2"></div>
-        </div>
-        <div class="row form-group py-3">
-            <div class="col-sm-3 col-md-3 d-flex justify-content-end">
-                <label class="h5 pt-1">Sugars</label>
-            </div>
-             <div class="col-sm-9 col-md-7">{{ form.sugars }}</div>
-            <div class="col-md-2"></div>
-        </div>
-        <div class="row form-group py-3">
-            <div class="col-sm-3 col-md-3 d-flex justify-content-end">
-                <label class="h5 pt-1">Protein</label>
-            </div>
-             <div class="col-sm-9 col-md-7">{{ form.protein }}</div>
-            <div class="col-md-2"></div>
-        </div>
+        {{ form.as_p }}
+
         <div class="d-flex justify-content-center py-3">
                 <button class="btn btn-primary mx-1" type="submit" value="SUBMIT">Submit</button>
                 <a href="{% url 'diet_home' %}" class="btn btn-danger mx-1">Cancel</a>
