--- a/snakedenfitness/templates/base.html
+++ b/snakedenfitness/templates/base.html
@@ -27,7 +27,7 @@
 
                     {% if user.is_authenticated %}
                         <a class="dropdown-item " href="{% url 'profile' %}" > Profile </a>
-                        <a class="dropdown-item " href="{% url 'logout' %}" > Log-out </a>
+                        <a class="dropdown-item " href="{% url 'logout' %}" > Logout </a>
                     {% else %}
                         <a class="dropdown-item " href="{% url 'login' %}"> Login </a>
                         <a class="dropdown-item " href="{% url 'register' %}" > Register </a>
