Button text color

--- a/snakedenfitness/diet/templates/diet/diet_home.html
+++ b/snakedenfitness/diet/templates/diet/diet_home.html
@@ -9,7 +9,7 @@
                     <button class="btn btn-success" type="submit" style="margin-left: 0">New</button>
                 </a>
                 <a href="{% url 'request_dietician' %}">
-                    <button class="btn btn-info" type="submit">Request Dietician</button>
+                    <button class="btn btn-info" type="submit" style="color: white">Request Dietician</button>
                 </a>
                 <h6 class="btn btn-light" style="margin-left: 825px">Today's Calories: 1800</h6>
             </div>
