--- a/snakedenfitness/fitness/templates/fitness/fitness_home.html
+++ b/snakedenfitness/fitness/templates/fitness/fitness_home.html
@@ -9,7 +9,7 @@
                     <button class="btn btn-success" type="submit">New</button>
                 </a>
                 <a href="{% url 'request_trainer' %}">
-                    <button class="btn btn-info" type="submit">Request Trainer</button>
+                    <button class="btn btn-info" type="submit" style="color: white">Request Trainer</button>
                 </a>
                 <h6 class="btn btn-light" style="margin-left: 1025px; background-color: white; border-color: white"></h6>
             </div>
