--- a/snakedenfitness/templates/base.html
+++ b/snakedenfitness/templates/base.html
@@ -45,8 +45,16 @@
         {% endfor %}
     {% endif %}
 
-    {% block body %}
+    {% block title %}
+    {% endblock %}
 
+    {% block body %}
+    {% endblock %}
+
+    {% block content %}
+    {% endblock %}
+
+    {% block scripts %}
     {% endblock %}
 </body>
 </html>
