--- a/snakedenfitness/diet/templates/diet/meal_form.html
+++ b/snakedenfitness/diet/templates/diet/meal_form.html
@@ -9,7 +9,7 @@
 
             <input type="submit" class="btn btn-primary"
                    style="margin-top: 15px; margin-left: 165px; text-align: center" value="Submit">
-            <a href="{% url 'test' %}" class="btn btn-danger" style="margin-top: 15px;">Cancel</a>
+            <a href="{% url 'diet_home' %}" class="btn btn-danger" style="margin-top: 15px;">Cancel</a>
         </form>
     </div>
 {% endblock %}
