--- a/snakedenfitness/fitness/templates/fitness/edit_workout.html
+++ b/snakedenfitness/fitness/templates/fitness/edit_workout.html
@@ -1,4 +1,15 @@
 {% extends 'base.html' %}
+
 {% block body %}
-<h1>hi edit workout</h1>
-{%  endblock %}
+ <div class="container p-0" style="margin-top: 25px; max-width: 25%;">
+        <h1 style="text-align: center">Edit Workout Information</h1>
+        <form action="/fitness/edit_workout/" method="post" style="margin-top: 25px">
+            {% csrf_token %}
+            {{ form.as_p }}
+
+            <input type="submit" class="btn btn-primary"
+                   style="margin-top: 15px; margin-left: 165px; text-align: center" value="Submit">
+            <a href="{% url 'fitness_home' %}" class="btn btn-danger" style="margin-top: 15px;">Cancel</a>
+        </form>
+    </div>
+{% endblock %}
