--- a/snakedenfitness/fitness/templates/fitness/fitness_home.html
+++ b/snakedenfitness/fitness/templates/fitness/fitness_home.html
@@ -14,84 +14,27 @@
                 <h6 class="btn btn-light" style="margin-left: 1025px; background-color: white; border-color: white"></h6>
             </div>
         </div>
-
-        <div class="row pb-1">
-            <div class="col-md-2 text-center h4">
-                Workout Type
+        {% for workout in workout %}
+            <div class="card">
+              <div class="card-header">
+                {{ workout.exercise_name }}
+              </div>
+              <div class="card-body">
+                <p class="card-text">
+                    <li>Workout Type: {{ workout.workout_type }}</li>
+                    <li>Muscle Group: {{ workout.muscle_group }}</li>
+                    <li>Reps: {{ workout.reps }}</li>
+                    <li>Sets: {{ workout.sets }}</li>
+                </p>
+                  <a href="{% url 'edit_workout' workout.id %}">
+                      <button>Edit</button>
+                  </a>
+                  <a href="{% url 'delete_workout' workout.id %}">
+                      <button>Delete</button>
+                  </a>
+              </div>
             </div>
-            <div class="col-md-2 text-center h4">
-                Muscle Group
-            </div>
-            <div class="col-md-2 text-center h4">
-                Exercise Name
-            </div>
-            <div class="col-md-2 text-center h4">
-                Reps
-            </div>
-            <div class="col-md-2 text-center h4">
-                Set
-            </div>
-            <div class="col-md-2 text-center h4">
-                Weight
-            </div>
-        </div>
-        <div class="row pb-1">
-            <div class="col-md-2 text-center h6">
-                {% for item in objs %}
-                <tr>
-                    <td>{{ item.workout_type }}</td>
-                    <tr><br><br></tr>
-                </tr>
-                {% endfor %}
-            </div>
-            <div class="col-md-2 text-center h6">
-                {% for item in objs %}
-                <tr>
-                    <td>{{ item.muscle_group }}</td>
-                    <tr><br><br></tr>
-                </tr>
-                {% endfor %}
-            </div>
-            <div class="col-md-2 text-center h6">
-                {% for item in objs %}
-                <tr>
-                    <td>{{ item.exercise_name }}</td>
-                    <tr><br><br></tr>
-                </tr>
-                {% endfor %}
-            </div>
-            <div class="col-md-2 text-center h6">
-                {% for item in objs %}
-                <tr>
-                    <td>{{ item.reps }}</td>
-                    <tr><br><br></tr>
-                </tr>
-                {% endfor %}
-            </div>
-            <div class="col-md-2 text-center h6">
-                {% for item in objs %}
-                <tr>
-                    <td>{{ item.sets }}</td>
-                    <tr><br><br></tr>
-                </tr>
-                {% endfor %}
-            </div>
-            <div class="col-md-2 text-center h6">
-                {% for item in objs %}
-                <tr>
-                    <td>{{ item.weight }}</td>
-                    <tr><br><br></tr>
-                </tr>
-                {% endfor %}
-            </div>
-            <div class="col-md-3 text-center h6">
-                <a href="{% url 'edit_workout'%}">
-                    <button class="btn btn-warning" type="submit" style="color: white">Edit</button>
-                </a>
-                <a href="{% url 'delete_workout' %}">
-                   <button class="btn btn-danger" type="submit">Delete</button>
-                </a>
-            </div>
-        </div>
-    </div>
+        <br><br>
+    {% endfor %}
+</div>
 {% endblock %}
