--- a/snakedenfitness/diet/templates/diet/edit_meal.html
+++ b/snakedenfitness/diet/templates/diet/edit_meal.html
@@ -7,7 +7,7 @@
             {% csrf_token %}
             {{ form.as_p }}
 
-            <input type="submit" class="btn btn-primary" value="Submit">
+            <input type="submit" class="btn btn-primary" style="margin-top: 15px; margin-left: 165px; text-align: center" value="Submit">
             <a href="{% url 'diet_home' %}" class="btn btn-danger" style="margin-top: 15px;">Cancel</a>
         </form>
     </div>
