--- a/snakedenfitness/fitness/templates/fitness/fitness_home.html
+++ b/snakedenfitness/fitness/templates/fitness/fitness_home.html
@@ -4,43 +4,57 @@
 <h1 style="margin-left: 900PX; margin-top: 50px">Fitness</h1>
 
 <div class="container p-0">
-<div class="row pb-3">
-     <div class="col-md-4 text-center h6">
-         <button class="btn btn-success" type="submit">New</button>
-         <button class="btn btn-info" type="submit">Request Trainer</button>
-     </div>
-    <div class="col-md-8"></div>
-</div>
+    <div class="row pb-3">
+        <div class="col-md-4 text-center h6">
+            <button class="btn btn-success" type="">New</button>
+            {% comment %} <a class="btn btn-info" href="{% url 'add_client_form' %}">Request Trainer</a> {% endcomment %}
+            {% comment %} <a href="{% url 'add_client_form' %}" class="nav-item"> Request </a> {% endcomment %}
 
-<div class="row pb-1">
-        <div class="col-md-3 text-center h4">
-            Workout Type
-        </div>
-        <div class="col-md-3 text-center h4">
-            Muscle Group
-        </div>
-        <div class="col-md-3 text-center h4">
-            Exercise Name
-        </div>
-        <div class="col-md-3 text-center h4">
-        </div>
-</div>
+            {% if CTtable%}
 
-<div class="row pb-1">
-        <div class="col-md-3 text-center h6">
-            Strength
+                <a class="btn btn-success" href="{% url 'update_client_form' %}">Change Trainer</a>
+            {% else %}
+                <a class="btn btn-success" href="{% url 'add_client_form' %}">Request Trainer</a>
+            {% endif %}
+
+            {% for trainer in CTtable %}
+                <h3> Your trainer is <b>{{ trainer.trainer }}</b> </h3>
+            {% endfor %}
+
+
         </div>
-        <div class="col-md-3 text-center h6">
-            Legs
-        </div>
-        <div class="col-md-3 text-center h6">
-            Leg Curls
-        </div>
-        <div class="col-md-3 text-center h6">
-            <button class="btn btn-warning" type="submit" style="color: white">View/Edit</button>
-            <button class="btn btn-danger" type="submit">Delete</button>
-        </div>
-</div>
+        <div class="col-md-8"></div>
+    </div>
+
+    <div class="row pb-1">
+            <div class="col-md-3 text-center h4">
+                Workout Type
+            </div>
+            <div class="col-md-3 text-center h4">
+                Muscle Group
+            </div>
+            <div class="col-md-3 text-center h4">
+                Exercise Name
+            </div>
+            <div class="col-md-3 text-center h4">
+            </div>
+    </div>
+
+    <div class="row pb-1">
+            <div class="col-md-3 text-center h6">
+                Strength
+            </div>
+            <div class="col-md-3 text-center h6">
+                Legs
+            </div>
+            <div class="col-md-3 text-center h6">
+                Leg Curls
+            </div>
+            <div class="col-md-3 text-center h6">
+                <button class="btn btn-warning" type="submit" style="color: white">View/Edit</button>
+                <button class="btn btn-danger" type="submit">Delete</button>
+            </div>
+    </div>
 </div>
  <h3>
   <a href="{% url 'workout_form' %}" style="text-decoration: none; color: limegreen;">Workout Form</a>
