--- a/snakedenfitness/fitness/templates/fitness/trainer_home.html
+++ b/snakedenfitness/fitness/templates/fitness/trainer_home.html
@@ -3,21 +3,34 @@
 {% block body %}
 
 <h1>Trainer Home</h1>
-<h2>Name: {{ user.get_full_name }}</h2>
-<h3>Username: {{ user.username }}</h3>
+<div class="container p-0">
 
-{% if user.is_authenticated %}
-    <p>you are authenticated</p>
-{% endif %}
-{% if user.profile.role == 2 %}
-    <p>you are a Trainer</p>
-{% endif %}
+    <h2>Name: {{ user.get_full_name }}</h2>
+    <h3>Username: {{ user.username }}</h3>
 
-<a href="{% url 'trainer_workout_data' %}" class="link"> Workout logs </a>
+    {% if user.is_authenticated %}
+        <p>you are authenticated</p>
+    {% endif %}
+    {% if user.profile.role == 2 %}
+        <p>you are a Trainer</p>
+    {% endif %}
+
+    <h4> Your clients:  </h4>
+        {% for trainer in CTtable %}
+            <div> {{ trainer.client }} </div>
+
+            <a class="btn btn-sm btn-warning" href="{% url 'delete_client_form' trainer.id %}">Remove Client</a>
+
+            <p></p>
+        {% endfor %}
+
+        {% comment %} {% if CTtable%}           ?client={{trainer.client}}
+                <a class="btn btn-success" href="{% url 'delete_client_form' %}">Remove Client</a>
+            {% endif %} {% endcomment %}
 
 
-
-
-
+        <br>
+        <a href="{% url 'trainer_workout_data' %}" class="btn btn-success"> Workout logs </a>
+</div>
 
 {% endblock %}
