--- a/snakedenfitness/users/templates/users/profile.html
+++ b/snakedenfitness/users/templates/users/profile.html
@@ -14,13 +14,28 @@
 
     {% if user.profile.role == 2 %}
         <p>you are a Trainer</p>
+        <h3> Your clients:  </h3>
+        {% for trainer in CTtable %}
+        <h3> <b>{{ trainer.client }}</b> </h3>
+        {% endfor %}
 
     {% elif user.profile.role == 1 %}
         <p>you are a Dietician</p>
 
     {% elif user.profile.role == 0 %}
         <p>you are a Client</p>
+
+        {% if CTtable%}
+        <a class="btn btn-success" href="{% url 'update_client_form' %}">Change Trainer</a>
+        {% else %}
+        <a class="btn btn-success" href="{% url 'add_client_form' %}">Request Trainer</a>
+        {% endif %}
+
+        {% for trainer in CTtable %}
+        <h3> Your trainer is <b>{{ trainer.trainer }}</b> </h3>
+        {% endfor %}
     {% endif %}
+
 
 
 {% endblock %}
