--- a/snakedenfitness/community/templates/community/room.html
+++ b/snakedenfitness/community/templates/community/room.html
@@ -2,8 +2,11 @@
 
 {% block content %}
 <div class="container">
-    <div class="text-center">
-        <h1>{{ room.name }}</h1>
+    <div class="text-center d-flex justify-content-between p-1">
+        <div class="h1">{{ room.name }}</div>
+        <div class="">
+            <a href="{% url 'edit_group' room.name %}" class="btn btn-dark mt-2">Edit Group</a>
+        </div>
     </div>
 
     <div>
