Fixed merge conflicts

--- a/snakedenfitness/diet/templates/diet/diet_home.html
+++ b/snakedenfitness/diet/templates/diet/diet_home.html
@@ -11,7 +11,7 @@
                 <a href="{% url 'request_dietician' %}">
                     <button class="btn btn-info" type="submit" style="color: white">Request Dietician</button>
                 </a>
-                <h6 class="btn btn-light" style="margin-left: 650px">Today's Calories: 1800</h6>
+                <h6 class="btn btn-light" style="margin-left: 650px">Today's Calories: {{total}}</h6>
             </div>
         </div>
 
