Bug remarks and minor fixes

--- a/snakedenfitness/diet/templates/diet/diet_home.html
+++ b/snakedenfitness/diet/templates/diet/diet_home.html
@@ -6,7 +6,7 @@
         <div class="row pb-1">
             <div class="col-md-12 text-center h6" >
                 <a href="{% url 'meal_form' %}">
-                    <button class="btn btn-success" type="submit" style="margin-left: 0">New</button>
+                    <button class="btn btn-success" type="submit">New</button>
                 </a>
                 <a href="{% url 'request_dietician' %}">
                     <button class="btn btn-info" type="submit" style="color: white">Request Dietician</button>
